--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -210,6 +210,11 @@
     "description": "Manage process vars component help text",
     "originalDefault": "The value of the selected field will be the process variable value."
   },
+  "5JNnFB": {
+    "defaultMessage": "Switching to the legacy registration options will remove the existing variables mapping. Are you sure you want to continue?",
+    "description": "Objects API registration backend: v1 switch warning message",
+    "originalDefault": "Switching to the legacy registration options will remove the existing variables mapping. Are you sure you want to continue?"
+  },
   "5MiyLE": {
     "defaultMessage": "Instellen",
     "description": "Button to open DMN configuration modal",
@@ -875,6 +880,11 @@
     "description": "Successful Submissions Removal Limit field label",
     "originalDefault": "Successful Submissions Removal Limit"
   },
+  "JfIB3K": {
+    "defaultMessage": "Override the minimum Level of Assurance. This is not supported by all authentication plugins.",
+    "description": "Minimal LoA override help text",
+    "originalDefault": "Override the minimum Level of Assurance. This is not supported by all authentication plugins."
+  },
   "JhdlEg": {
     "defaultMessage": "Er zijn mede-ondertekencomponenten gevonden binnen een herhalende groep. Dit is niet ondersteund.",
     "description": "Cosign components in repeating group warning message",
@@ -894,6 +904,11 @@
     "defaultMessage": "Verwerking",
     "description": "Form processing fieldset title",
     "originalDefault": "Processing"
+  },
+  "KGcyn+": {
+    "defaultMessage": "The form is not active",
+    "description": "Show form button disabled title",
+    "originalDefault": "The form is not active"
   },
   "KIy7Wr": {
     "defaultMessage": "Naam (of titel) van het formulier.",
