--- a/src/openforms/js/lang/formio/en.json
+++ b/src/openforms/js/lang/formio/en.json
@@ -35,5 +35,6 @@
   "maxFileSizeMessage": "The maximum file size is {{maxFileSize}}.",
   "The uploaded file is not of an allowed type. It must be: {{ pattern }}.": "The uploaded file is not of an allowed type. It must be: {{ pattern }}.",
   "{{ labels }} or {{ lastLabel }}": "{{ labels }} or {{ lastLabel }}",
+  "invalid_time": "Only times between {{ minTime }} and {{ maxTime }} are allowed.",
   "": ""
 }
