--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1893,6 +1893,11 @@
     "description": "User defined variable deletion confirm message",
     "originalDefault": "Are you sure you want to delete this variable?"
   },
+  "hhoWxC": {
+    "defaultMessage": "If left blank, then the most recent version is used.",
+    "description": "DMN action: definition version field help text",
+    "originalDefault": "If left blank, then the most recent version is used."
+  },
   "huHjRm": {
     "defaultMessage": "Configureren",
     "description": "Manage complex process vars configure column title",
