--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -845,6 +845,11 @@
     "description": "Decision definition ID label",
     "originalDefault": "Decision definition ID"
   },
+  "Ijrbrp": {
+    "defaultMessage": "Which Objects API group to use. If not provided, the default Objects API group will be used.",
+    "description": "Objects API group selection",
+    "originalDefault": "Which Objects API group to use. If not provided, the default Objects API group will be used."
+  },
   "Ika4IH": {
     "defaultMessage": "Inzendingen worden permanent verwijderd",
     "description": "delete_permanently removal method option label",
@@ -2092,6 +2097,11 @@
     "defaultMessage": "Formulierveld",
     "description": "JSON variable type \"Form field\" representation",
     "originalDefault": "Form field"
+  },
+  "mgs/Xe": {
+    "defaultMessage": "Objects API group",
+    "description": "Objects API group",
+    "originalDefault": "Objects API group"
   },
   "myvtu0": {
     "defaultMessage": "Beheer procesvariabelen",
