--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -589,6 +589,11 @@
     "description": "Move down icon title",
     "originalDefault": "Move down"
   },
+  "DRG6XN": {
+    "defaultMessage": "invalid input mapping(s)",
+    "description": "Warning message: DMN input mapping problems detected",
+    "originalDefault": "invalid input mapping(s)"
+  },
   "DRidde": {
     "defaultMessage": "Could not retrieve the decision definitions IDs/versions. Is the selected DMN plugin running and properly configured?",
     "description": "Admin error for API error when configuring Camunda actions",
@@ -713,6 +718,11 @@
     "defaultMessage": "Reset to default description",
     "description": "Reset logic expression icon title",
     "originalDefault": "Reset to default description"
+  },
+  "GBsms3": {
+    "defaultMessage": "No form variable specified (anymore).",
+    "description": "DMN in/output mapping: detected empty form variable",
+    "originalDefault": "No form variable specified (anymore)."
   },
   "GFXEAX": {
     "defaultMessage": "Internal step name",
@@ -1809,6 +1819,11 @@
     "description": "Confirmation message to remove a mapping",
     "originalDefault": "Are you sure that you want to remove this mapping?"
   },
+  "gheRkp": {
+    "defaultMessage": "Detected some problems in this action: {problems}.",
+    "description": "Logic action warning icon text",
+    "originalDefault": "Detected some problems in this action: {problems}."
+  },
   "gr7edY": {
     "defaultMessage": "App version",
     "description": "App version column header",
@@ -2298,6 +2313,11 @@
     "defaultMessage": "Informatieobjecttype",
     "description": "URL of the INFORMATIEOBJECTTYPE in the Catalogi API",
     "originalDefault": "Informatieobjecttype"
+  },
+  "sCkGL9": {
+    "defaultMessage": "invalid output mapping(s)",
+    "description": "Warning message: DMN output mapping problems detected",
+    "originalDefault": "invalid output mapping(s)"
   },
   "sFHD3/": {
     "defaultMessage": "Whether to send a confirmation email to the end-user who submitted the form.",
