--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -579,6 +579,11 @@
     "description": "Form submissionAllowed field label",
     "originalDefault": "Submission allowed"
   },
+  "D6NRQk": {
+    "defaultMessage": "Detected problems in {count} logic rule(s).",
+    "description": "Logic tab warning icon message",
+    "originalDefault": "Detected problems in {count} logic rule(s)."
+  },
   "DEAqyQ": {
     "defaultMessage": "Boolean",
     "description": "JSON variable type \"boolean\" representation",
@@ -2333,6 +2338,11 @@
     "defaultMessage": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?",
     "description": "Objects API registration backend: v2 switch warning message",
     "originalDefault": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?"
+  },
+  "t5fg/K": {
+    "defaultMessage": "one or more actions are invalid",
+    "description": "Logic rule warning message about problematic actions.",
+    "originalDefault": "one or more actions are invalid"
   },
   "t9+e9k": {
     "defaultMessage": "Are you sure you want to remove this mapping?",
