--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1229,6 +1229,11 @@
     "description": "Accessible label for (form) variable dropdown",
     "originalDefault": "Form variable"
   },
+  "RELMCa": {
+    "defaultMessage": "Which Objects API group to use.",
+    "description": "Objects API group selection",
+    "originalDefault": "Which Objects API group to use."
+  },
   "RcVlPF": {
     "defaultMessage": "Interne naam van het formulier voor onderscheid in overzichten",
     "description": "Form name field help text",
@@ -2107,6 +2112,11 @@
     "defaultMessage": "Formulierveld",
     "description": "JSON variable type \"Form field\" representation",
     "originalDefault": "Form field"
+  },
+  "mgs/Xe": {
+    "defaultMessage": "Objects API group",
+    "description": "Objects API group",
+    "originalDefault": "Objects API group"
   },
   "myvtu0": {
     "defaultMessage": "Beheer procesvariabelen",
